--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" />
 
-  <title>React App</title>
+  <title>YUL MUSIC/title>
 </head>
 
 <body>
